Fixed navbar - align centered

--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,10 @@ h2 {
 	height: 52px;
 }
 
+.navbar-nav {
+	align-items: center;
+}
+
 /* Main slider */
 
 .main-slider {
